<resources>
    <string name="app_name">AppGastosViagem</string>
    <string name="distancia">Distância</string>
    <string name="total_de_quilometros">Total de quilômetros</string>
    <string name="preco">Preço</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">Kms por litro</string>
    <string name="seu_gasto_total_sera_de">Seu gasto total será de:</string>
    <string name="calcular">Calcular</string>
    <string name="valor_total">R$ 0</string>
</resources>